# cta_crime

./: .gitignore  README.md  app.py  pyproject.toml
core/: __init__.py  extract.py
