[project]
name = "cta-crime"
version = "0.1.0"
description = "Streamlist dashboard that visualize crimes in Chicago's rapid transit system."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "geopy==2.4.1",
    "plotly==6.6.0",
    "polars==1.39.3",
    "python-dotenv==1.2.2",
    "sodapy==2.2.0",
    "streamlit==1.55.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
